--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,9 @@
         "eslint:recommended",
         "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
-        "plugin:react-hooks/recommended"
+        "plugin:react-hooks/recommended",
+        "plugin:prettier/recommended",
+        "plugin:@next/next/recommended"
     ],
     "overrides": [
     ],
